# mit-live-lets-make-a-set

./: .gitignore  LICENSE  README.md  pyproject.toml
setsmith/: __init__.py  cache.py  config.py  db.py  http.py  models.py
setsmith/engine/: __init__.py  build.py  score.py  sequence.py  vibes.py
setsmith/sources/: __init__.py  deezer.py  discovery.py  lastfm.py
setsmith/web/: __init__.py  app.py
setsmith/web/static/: style.css
setsmith/web/templates/: _results.html  _setlist.html  _songs.html  base.html  gig.html  index.html  print.html
tests/: test_engine.py
