[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "setsmith"
version = "0.1.0"
description = "Band set-list generator, popularity, ease, vibe, and member votes into a sequenced set"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sofia Guerra" }]
keywords = ["music", "setlist", "band", "gig", "deezer", "fastapi"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
setsmith = "setsmith.web.app:main"

[project.urls]
Homepage = "https://github.com/s-eun-young-g/mit-live-lets-make-a-set"

[tool.hatch.build.targets.wheel]
packages = ["setsmith"]

[tool.pytest.ini_options]
testpaths = ["tests"]
